iRedMail-1.7.0:

+ Supports new distribution release:
    + Ubuntu 24.04
    + OpenBSD 7.5.

* Dropped distribution release:
    - Debian 11 (bullseye). Please use the latest stable release Debian 12.
    - Ubuntu 20.04 (focal). Please use the latest stable release Ubuntu 24.04
      (recommended) or 22.04 instead.
    - OpenBSD 7.3, 7.4. Please use 7.5 instead.

* Improvements:
    - Fail2ban now stores started jail names in SQL table `fail2ban.jails`.
    - Disable multi-threaded database reload in ClamAV (with
      parameter "ConcurrentDatabaseReload no").
    - Add new parameter `OCSAdminURL` in sogo.conf for the new SQL table
      `sogo_admin` introduced in SOGo v5.10.0.

* Fixed issues:
    - Not set correct compatibility_level for Postfix. #233
    - Not prevent invalid address rewritten in `From:` header in custom
      Postfix transports.

* Updated packages:
    + roundcube -> 1.6.7.
    + netdata -> 1.45.6
    + mlmmjadmin -> 3.2.1
    + iRedAPD -> 5.6.0
    + uwsgi -> 2.0.25.1 (OpenBSD only)

iRedMail-1.6.8:

* Fixed issues:
    - Postfix:
        - Mitigate SMTP smuggling attack by rejecting RFC 2920/5321 violations.
          Thanks @EsadCetiner for the contribution:
          https://github.com/iredmail/iRedMail/pull/248
        - [LDAP Backend] Can not use (mlmmj) mailing list as member of another
          mailing list.
    - CentOS/Rocky: Not enable daily cron job to update SpamAssassin rules.
      Thanks to forum user `roccoro` for the report.

* Updated packages:
    + mlmmjadmin -> 3.1.9
    + netdata -> 1.44.1

iRedMail-1.6.7:

* Updated packages:
    + netdata -> 1.43.1
    + roundcube -> 1.6.5. SECURITY UPDATE.

iRedMail-1.6.6:

- Fail2ban: Do not ban client which triggers `lost connection after UNKNOWN` error.

* Updated packages:
    + roundcube -> 1.6.4. Security update.
    + netdata -> 1.43.0

iRedMail-1.6.5:

    * Updated packages:
        + roundcube -> 1.6.3. Security update.
        + netdata -> 1.42.4
        + iredadmin -> 2.5