@@ -1,4 +1,4 @@
-connect = host=PH_SQL_SERVER_ADDRESS port=PH_SQL_SERVER_PORT dbname=PH_REALTIME_QUOTA_DB_NAME user=PH_REALTIME_QUOTA_DB_USER password=PH_REALTIME_QUOTA_DB_PASSWORD
+connect = host=PH_SQL_SERVER_ADDRESS port=PH_SQL_SERVER_PORT dbname=PH_LAST_LOGIN_DB_NAME user=PH_LAST_LOGIN_DB_USER password=PH_LAST_LOGIN_DB_PASSWORD
 
 map {
     pattern = shared/last-login/imap/$user/$domain
