@@ -295,14 +295,14 @@ dict {
 }
 
 protocol lda {
-    mail_plugins = $mail_plugins sieve
+    mail_plugins = $mail_plugins sieve last_login
     lda_mailbox_autocreate = yes
     lda_mailbox_autosubscribe = yes
 }
 
 protocol lmtp {
     # Plugins
-    mail_plugins = $mail_plugins sieve
+    mail_plugins = $mail_plugins sieve last_login
 
     # Address extension delivery
     lmtp_save_to_detail_mailbox = yes
